# small-projects

./: .gitignore
.github/workflows/: build-jobmail.yml  build.yml
crud-angular-spring/angular/: angular.json  package-lock.json  package.json
crud-angular-spring/angular/src/: styles.scss
crud-angular-spring/angular/src/app/: app.component.html
crud-angular-spring/spring/: pom.xml
estagio-target-sistemas/: desafio2.py  desafio3.json  desafio3.py  desafio5.py  utils.py
estagio-target-sistemas/Ribeirão preto/: desafio1.py  desafio2.py  desafio3.py  desafio4.py  desafio5.py
estagio-target-sistemas/São Paulo/: desafio2.py  desafio4.py  desafio5.py  utils.py
exercicios-java/: .project  README.md
getnet-webhoook/: pom.xml
jobmail/: .env.example  README.md  docker-compose.yml  install.sh  pyproject.toml  setup.sh
jobmail/.github/actions/: build.yml
jobmail/app/: Dockerfile  app.py
jobmail/app/helpers/: filter_spreadsheet.py
jobmail/app/settings/: consts.py
jobmail/infra/: setup.sh  setup_service.sh
jobmail/src/: Dockerfile  app.py
jobmail/src/settings/: db_utils.py  logger.py
likeshoes/: flexbox.html  index.html  produto.html
likeshoes/css/: reset.css  style.css
m-game/: .env  package-lock.json  package.json  server.js
m-game/public/: game.js  index.html  keyboard-listener.js  render-screen.js
relogio-html/: index.html
relogio-html/css/: style.css
relogio-html/js/: scripts.js
search-jobs-on-xls/: consts.py  download.py  index.py  pyproject.toml
search-jobs-on-xls/files/: vagas.xlsx
search-jobs-on-xls/logger/: get_logger.py
(+70 files in other folders)
